--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
+models/convnext_classifier_base_with_coords.pth filter=lfs diff=lfs merge=lfs -text
+models/segformer/config.json filter=lfs diff=lfs merge=lfs -text
+models/segformer/model.safetensors filter=lfs diff=lfs merge=lfs -text
