--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
+# Core
 fastapi
 uvicorn
-supabase
-python-dotenv
-requests
-pandas
-scikit-learn
-matplotlib
-seaborn
-python-multipart
-numpy
-scipy
-psycopg2
-opencv-python
-torch 
+
+# ML
+torch==2.2.2
 torchvision
 torchaudio
-transformers
+opencv-python
+numpy
+pillow
+scikit-learn
+matplotlib
 
-# pip install  -r requirements.txt
-# source venv/bin/activate
-# uvicorn main:app --reload
+# Supabase
+supabase
+
+# Utils
+python-multipart
+requests
