--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,32 @@
-# Core
-fastapi
-uvicorn
+# --- Core ML & Vision ---
+torch>=2.0
+torchvision>=0.15
+transformers>=4.30
+safetensors>=0.3
+opencv-python>=4.7
+Pillow>=9.5
+numpy>=1.24
+pandas>=2.0
+torch==2.1.2+cpu
+torchvision==0.16.2+cpu
+torchaudio==2.1.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 
-# ML
-torch==2.2.2
-torchvision
-torchaudio
-opencv-python
-numpy
-pillow
-scikit-learn
-matplotlib
 
-# Supabase
-supabase
+# --- FastAPI Server ---
+fastapi>=0.100
+uvicorn[standard]>=0.23
 
-# Utils
-python-multipart
-requests
+# --- HTTP Requests & Utils ---
+requests>=2.31
+tqdm>=4.66
+
+# --- Optional (If you're using Supabase SDK) ---
+supabase>=1.0.3  # Optional, if you're using Supabase Python SDK
+python-dotenv>=1.0  # Optional, for managing .env
+
+# --- Validation & Parsing ---
+pydantic>=2.0
+
+# --- File & Path Management ---
+aiofiles>=23.1  # If using FastAPI for file uploads or async file access
