--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,6 @@ dependencies:
   - pip
   - numpy
   - pandas
-  - supabase
   - pillow
   - opencv
   - tqdm
@@ -17,6 +16,7 @@ dependencies:
   - uvicorn[standard]>=0.23
   - requests
   - supabase
+  - httpx[http2]
   - pydantic>=2.0
   - python-dotenv
   - aiofiles
