--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,21 @@
-# Core ML & Vision
-torch==2.1.2+cpu
-torchvision==0.16.2+cpu
-torchaudio==2.1.2+cpu
--f https://download.pytorch.org/whl/torch_stable.html
-
+torch==2.8.0
+torchvision==0.16.2
+torchaudio==2.1.2
 transformers>=4.30
 safetensors>=0.3
 opencv-python>=4.7
 Pillow>=9.5
 numpy<2
 pandas>=2.0
-
-# FastAPI Server
 fastapi
 uvicorn[standard]
-
-# HTTP Requests & Utils
 requests>=2.31
 tqdm>=4.66
-
-# Optional: Supabase SDK
 supabase>=1.0.3
 python-dotenv>=1.0
-
-# Validation & Parsing
 pydantic>=1.10,<2.0
-
-# File & Path Management
 aiofiles>=23.1
+
  
 
 
